@@ -19,6 +19,7 @@ package com.android.internal.protolog;
 import static android.tools.traces.Utils.busyWaitForDataSourceRegistration;
 import static android.tools.traces.Utils.busyWaitTracingSessionDoesntExist;
 import static android.tools.traces.Utils.busyWaitTracingSessionExists;
+import static android.tracing.perfetto.TestUtils.createTempWriter;
 
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertThrows;
@@ -28,16 +29,17 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.never;
+import static org.junit.Assume.assumeTrue;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import static java.io.File.createTempFile;
+import static perfetto.protos.TracePacketOuterClass.TracePacket.SequenceFlags.SEQ_INCREMENTAL_STATE_CLEARED;
+import static perfetto.protos.TracePacketOuterClass.TracePacket.SequenceFlags.SEQ_NEEDS_INCREMENTAL_STATE;
 
 import android.os.SystemClock;
 import android.platform.test.annotations.Presubmit;
-import android.tools.ScenarioBuilder;
-import android.tools.traces.TraceConfig;
-import android.tools.traces.TraceConfigs;
+import android.tools.Tag;
+import android.tools.io.TraceType;
 import android.tools.traces.io.ResultReader;
 import android.tools.traces.io.ResultWriter;
 import android.tools.traces.monitors.PerfettoTraceMonitor;
@@ -65,12 +67,14 @@ import org.mockito.stubbing.Answer;
 
 import perfetto.protos.Protolog;
 import perfetto.protos.ProtologCommon;
+import perfetto.protos.TraceOuterClass.Trace;
 
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
 import java.util.Random;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -87,19 +91,6 @@ public class ProcessedPerfettoProtoLogImplTest {
     private final File mTracingDirectory = InstrumentationRegistry.getInstrumentation()
             .getTargetContext().getFilesDir();
 
-    private final ResultWriter mWriter = new ResultWriter()
-            .forScenario(new ScenarioBuilder()
-                    .forClass(createTempFile("temp", "").getName()).build())
-            .withOutputDir(mTracingDirectory)
-            .setRunComplete();
-
-    private final TraceConfigs mTraceConfig = new TraceConfigs(
-            new TraceConfig(false, true, false),
-            new TraceConfig(false, true, false),
-            new TraceConfig(false, true, false),
-            new TraceConfig(false, true, false)
-    );
-
     private static ProtoLogConfigurationService sProtoLogConfigurationService;
     private static ProtoLogDataSource sTestDataSource;
     private static PerfettoProtoLogImpl sProtoLog;
@@ -107,6 +98,9 @@ public class ProcessedPerfettoProtoLogImplTest {
     private static ProtoLogCacheUpdater sCacheUpdater;
 
     private static ProtoLogViewerConfigReader sReader;
+
+    private static int sOriginalMaxInternedStringsSize;
+
 
     public ProcessedPerfettoProtoLogImplTest() throws IOException { }
 
@@ -153,6 +147,13 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 .setLevel(ProtologCommon.ProtoLogLevel.PROTOLOG_LEVEL_WTF)
                                 .setGroupId(1)
                                 .setLocation("com/test/MyTestClass.java:192")
+                ).addMessages(
+                        Protolog.ProtoLogViewerConfig.MessageData.newBuilder()
+                                .setMessageId(6)
+                                .setMessage("My Test String Arg Message %s")
+                                .setLevel(ProtologCommon.ProtoLogLevel.PROTOLOG_LEVEL_DEBUG)
+                                .setGroupId(1)
+                                .setLocation("com/test/MyTestClass.java:193")
                 );
 
         ViewerConfigInputStreamProvider viewerConfigInputStreamProvider = Mockito.mock(
@@ -190,6 +191,9 @@ public class ProcessedPerfettoProtoLogImplTest {
                 (instance) -> sCacheUpdater.update(instance), TestProtoLogGroup.values(),
                 sProtoLogConfigurationService);
         sProtoLog.enable();
+
+        sOriginalMaxInternedStringsSize =
+                PerfettoProtoLogImpl.MAX_INTERNED_STRINGS_SIZE_BYTES_BEFORE_RESET;
     }
 
     @Before
@@ -197,12 +201,13 @@ public class ProcessedPerfettoProtoLogImplTest {
         Mockito.reset(sReader);
 
         TestProtoLogGroup.TEST_GROUP.setLogToLogcat(false);
-        TestProtoLogGroup.TEST_GROUP.setLogToProto(false);
     }
 
     @After
     public void tearDown() {
         ProtoLogImpl.setSingleInstance(null);
+        PerfettoProtoLogImpl.MAX_INTERNED_STRINGS_SIZE_BYTES_BEFORE_RESET =
+                sOriginalMaxInternedStringsSize;
     }
 
     @Test
@@ -219,7 +224,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             traceMonitor.start();
             assertTrue(sProtoLog.isProtoEnabled());
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(createTempWriter(mTracingDirectory));
         }
     }
 
@@ -232,7 +237,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             traceMonitor.start();
             assertTrue(sProtoLog.isProtoEnabled());
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(createTempWriter(mTracingDirectory));
         }
 
         assertFalse(sProtoLog.isProtoEnabled());
@@ -243,6 +248,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(false, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             // Shouldn't be logging anything except WTF unless explicitly requested in the group
@@ -258,10 +265,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -277,6 +284,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.DEBUG, true)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -290,10 +299,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(4);
@@ -312,6 +321,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.WARN, false)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                     ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -325,10 +336,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(3);
@@ -342,6 +353,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
@@ -355,10 +368,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.WTF, TestProtoLogGroup.TEST_GROUP, 5,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(5);
@@ -374,7 +387,6 @@ public class ProcessedPerfettoProtoLogImplTest {
         when(sReader.getViewerString(anyLong())).thenReturn("test %b %d %% 0x%x %s %f");
         PerfettoProtoLogImpl implSpy = Mockito.spy(sProtoLog);
         TestProtoLogGroup.TEST_GROUP.setLogToLogcat(true);
-        TestProtoLogGroup.TEST_GROUP.setLogToProto(false);
 
         implSpy.log(
                 LogLevel.INFO, TestProtoLogGroup.TEST_GROUP, 1234, 4321,
@@ -391,7 +403,6 @@ public class ProcessedPerfettoProtoLogImplTest {
         when(sReader.getViewerString(anyLong())).thenReturn("test %b %d %% %x %s %f");
         PerfettoProtoLogImpl implSpy = Mockito.spy(sProtoLog);
         TestProtoLogGroup.TEST_GROUP.setLogToLogcat(true);
-        TestProtoLogGroup.TEST_GROUP.setLogToProto(false);
 
         implSpy.log(
                 LogLevel.INFO, TestProtoLogGroup.TEST_GROUP, 1234, 4321,
@@ -409,7 +420,6 @@ public class ProcessedPerfettoProtoLogImplTest {
         when(sReader.getViewerString(anyLong())).thenReturn(null);
         PerfettoProtoLogImpl implSpy = Mockito.spy(sProtoLog);
         TestProtoLogGroup.TEST_GROUP.setLogToLogcat(true);
-        TestProtoLogGroup.TEST_GROUP.setLogToProto(false);
 
         var assertion = assertThrows(RuntimeException.class, () ->
                 implSpy.log(LogLevel.INFO, TestProtoLogGroup.TEST_GROUP, 1234, 4321,
@@ -441,6 +451,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         long before;
         long after;
         try {
@@ -455,10 +467,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     new Object[]{"test", 1, 2, 3, 0.4, 0.5, 0.6, true});
             after = SystemClock.elapsedRealtimeNanos();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -476,6 +488,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         long before;
         long after;
         try {
@@ -489,10 +503,10 @@ public class ProcessedPerfettoProtoLogImplTest {
                     "test", 1, 3, 0.4, true);
             after = SystemClock.elapsedRealtimeNanos();
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -509,15 +523,17 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -545,6 +561,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(
@@ -552,11 +570,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                     0b01100100,
                     new Object[]{"test", 1, 0.1, true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
-
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
-        assertThrows(java.net.SocketException.class, reader::readProtoLogTrace);
     }
 
     @Test
@@ -564,15 +579,17 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(false, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     0b11, new Object[]{true});
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).isEmpty();
@@ -588,6 +605,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 true)),
                         TEST_PROTOLOG_DATASOURCE_NAME
                 ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
@@ -595,10 +614,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             ProtoLogImpl.d(TestProtoLogGroup.TEST_GROUP, 1,
                     0b11, true);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -644,13 +663,13 @@ public class ProcessedPerfettoProtoLogImplTest {
 
                 Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(2);
             } finally {
-                traceMonitor2.stop(mWriter);
+                traceMonitor2.stop(createTempWriter(mTracingDirectory));
             }
 
             Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(3);
 
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(createTempWriter(mTracingDirectory));
         }
 
         Truth.assertThat(cacheUpdateCallCount.get()).isEqualTo(4);
@@ -716,7 +735,7 @@ public class ProcessedPerfettoProtoLogImplTest {
                 Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.WTF))
                         .isTrue();
             } finally {
-                traceMonitor2.stop(mWriter);
+                traceMonitor2.stop(createTempWriter(mTracingDirectory));
             }
 
             Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.DEBUG))
@@ -732,7 +751,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.WTF))
                     .isTrue();
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(createTempWriter(mTracingDirectory));
         }
 
         Truth.assertThat(sProtoLog.isEnabled(TestProtoLogGroup.TEST_GROUP, LogLevel.DEBUG))
@@ -755,20 +774,21 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "My test null string: %s", (Object) null);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("My test null string: null");
     }
 
@@ -778,20 +798,21 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
 
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "My null args: %d, %f, %b", null, null, null);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("My null args: 0, 0.000000, false");
     }
 
@@ -805,12 +826,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
 
-        final ResultWriter writer2 = new ResultWriter()
-                .forScenario(new ScenarioBuilder()
-                        .forClass(createTempFile("temp", "").getName()).build())
-                .withOutputDir(mTracingDirectory)
-                .setRunComplete();
-
+        final var writer = createTempWriter(mTracingDirectory);
+        final var writer2 = createTempWriter(mTracingDirectory);
         try {
             traceMonitor1.start();
             traceMonitor2.start();
@@ -818,22 +835,22 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true});
         } finally {
-            traceMonitor1.stop(mWriter);
+            traceMonitor1.stop(writer);
             traceMonitor2.stop(writer2);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protologFromMonitor1 = reader.readProtoLogTrace();
 
-        final ResultReader reader2 = new ResultReader(writer2.write(), mTraceConfig);
+        final ResultReader reader2 = new ResultReader(writer2.write());
         final ProtoLogTrace protologFromMonitor2 = reader2.readProtoLogTrace();
 
         Truth.assertThat(protologFromMonitor1.messages).hasSize(1);
-        Truth.assertThat(protologFromMonitor1.messages.get(0).getMessage())
+        Truth.assertThat(protologFromMonitor1.messages.getFirst().getMessage())
                 .isEqualTo("My Test Debug Log Message true");
 
         Truth.assertThat(protologFromMonitor2.messages).hasSize(1);
-        Truth.assertThat(protologFromMonitor2.messages.get(0).getMessage())
+        Truth.assertThat(protologFromMonitor2.messages.getFirst().getMessage())
                 .isEqualTo("My Test Debug Log Message true");
     }
 
@@ -842,6 +859,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(LogLevel.WARN, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
@@ -851,10 +870,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.ERROR, TestProtoLogGroup.TEST_GROUP,
                     "This message should also be logged %d", 567);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(2);
@@ -875,6 +894,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(LogLevel.DEBUG, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.VERBOSE, TestProtoLogGroup.TEST_GROUP,
@@ -882,17 +903,17 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "This message should be logged %d", 123);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
 
-        Truth.assertThat(protolog.messages.get(0).getLevel())
+        Truth.assertThat(protolog.messages.getFirst().getLevel())
                 .isEqualTo(LogLevel.DEBUG);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("This message should be logged 123");
     }
 
@@ -904,6 +925,8 @@ public class ProcessedPerfettoProtoLogImplTest {
                                 TestProtoLogGroup.TEST_GROUP.name(), LogLevel.DEBUG, false)
                 ), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             sProtoLog.log(LogLevel.VERBOSE, TestProtoLogGroup.TEST_GROUP,
@@ -911,17 +934,17 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
                     "This message should be logged %d", 123);
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
 
-        Truth.assertThat(protolog.messages.get(0).getLevel())
+        Truth.assertThat(protolog.messages.getFirst().getLevel())
                 .isEqualTo(LogLevel.DEBUG);
-        Truth.assertThat(protolog.messages.get(0).getMessage())
+        Truth.assertThat(protolog.messages.getFirst().getMessage())
                 .isEqualTo("This message should be logged 123");
     }
 
@@ -970,6 +993,8 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog should be enabled after starting the trace.",
@@ -979,10 +1004,10 @@ public class ProcessedPerfettoProtoLogImplTest {
             sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
                     LogDataType.BOOLEAN, new Object[]{true}); // "true" to distinguish
         } finally {
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(1);
@@ -1001,7 +1026,7 @@ public class ProcessedPerfettoProtoLogImplTest {
         final CountDownLatch releaseExecutorLatch = new CountDownLatch(1);
 
         // Submit task to block the executor.
-        sProtoLog.mBackgroundHandler.post(() -> {
+        sProtoLog.mSingleThreadedExecutor.execute(() -> {
             executorBlockedLatch.countDown();
             try {
                 if (!releaseExecutorLatch.await(60, TimeUnit.SECONDS)) {
@@ -1049,22 +1074,22 @@ public class ProcessedPerfettoProtoLogImplTest {
         releaseExecutorLatch.countDown();
 
         var writer0 = new ResultWriter()
-                .forScenario(new ScenarioBuilder().forClass("scenario0").build())
+                .withName("scenario0")
                 .withOutputDir(mTracingDirectory).setRunComplete();
         traceMonitor0.stop(writer0);
 
         var writer1 = new ResultWriter()
-                .forScenario(new ScenarioBuilder().forClass("scenario1").build())
+                .withName("scenario1")
                 .withOutputDir(mTracingDirectory).setRunComplete();
         traceMonitor1.stop(writer1);
         busyWaitTracingSessionDoesntExist("test_session1");
 
-        final ResultReader reader0 = new ResultReader(writer0.write(), mTraceConfig);
+        final ResultReader reader0 = new ResultReader(writer0.write());
         final ProtoLogTrace protolog0 = reader0.readProtoLogTrace();
 
         Truth.assertThat(protolog0.messages).hasSize(numOldMessages + numNewMessages);
 
-        final ResultReader reader1 = new ResultReader(writer1.write(), mTraceConfig);
+        final ResultReader reader1 = new ResultReader(writer1.write());
         final ProtoLogTrace protolog1 = reader1.readProtoLogTrace();
 
         Truth.assertThat(protolog1.messages).hasSize(numNewMessages);
@@ -1092,13 +1117,15 @@ public class ProcessedPerfettoProtoLogImplTest {
         PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
                 .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
                 .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
         try {
             traceMonitor.start();
             assertTrue("ProtoLog should be enabled after starting the trace.",
                     sProtoLog.isProtoEnabled());
 
             // Submit a task that will block the executor queue.
-            sProtoLog.mBackgroundHandler.post(() -> {
+            sProtoLog.mSingleThreadedExecutor.execute(() -> {
                 try {
                     blockingTaskStartedExecution.set(true);
                     processingHasStartedLatch.countDown(); // Signal that this task has started
@@ -1140,7 +1167,7 @@ public class ProcessedPerfettoProtoLogImplTest {
             allowProcessingToContinueLatch.countDown();
 
             // Stop tracing immediately. The implementation should wait for the
-            // mBackgroundHandler to process all queued messages (including the
+            // mSingleThreadedExecutor to process all queued messages (including the
             // now-unblocked first task and all subsequent log messages).
         } finally {
             // Ensure the latch is always counted down if an exception occurred before stop,
@@ -1148,11 +1175,11 @@ public class ProcessedPerfettoProtoLogImplTest {
             if (allowProcessingToContinueLatch.getCount() > 0) {
                 allowProcessingToContinueLatch.countDown();
             }
-            traceMonitor.stop(mWriter);
+            traceMonitor.stop(writer);
         }
 
         // Verify that all messages were written to the trace.
-        final ResultReader reader = new ResultReader(mWriter.write(), mTraceConfig);
+        final ResultReader reader = new ResultReader(writer.write());
         final ProtoLogTrace protolog = reader.readProtoLogTrace();
 
         Truth.assertThat(protolog.messages).hasSize(numMessages);
@@ -1163,11 +1190,174 @@ public class ProcessedPerfettoProtoLogImplTest {
         }
     }
 
+    @Test
+    public void snapshotsMutableArgumentsOnCallingThread() throws Exception {
+        // This test ensures that the mutable argument is snapshotted on the calling thread,
+        // and not on the background thread, otherwise it might be modified concurrently and this
+        // might lead to a crash.
+
+        PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
+                .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
+                .build();
+
+        final String initialValue = "InitialValue";
+        final String modifiedValue = "ModifiedValueAfterLogCall";
+        final StringBuilder mutableArg = new StringBuilder(initialValue);
+        final String logMessageFormat = "Test with mutable arg: %s";
+
+        final ExecutorService backgroundHandler = sProtoLog.mSingleThreadedExecutor;
+
+        // Task to pause the background thread.
+        final CountDownLatch backgroundThreadPausedLatch = new CountDownLatch(1);
+        backgroundHandler.execute(() -> {
+            try {
+                backgroundThreadPausedLatch.await();
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                Truth.assertWithMessage(
+                        "Background thread interrupted while waiting on pause latch.")
+                        .fail();
+            }
+        });
+
+        final var writer = createTempWriter(mTracingDirectory);
+        try {
+            traceMonitor.start();
+            assertTrue("ProtoLog tracing should be enabled", sProtoLog.isProtoEnabled());
+
+            sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP,
+                    logMessageFormat, mutableArg);
+
+            mutableArg.replace(0, mutableArg.length(), modifiedValue);
+
+            // Unpause the background thread.
+            backgroundThreadPausedLatch.countDown();
+        } finally {
+            traceMonitor.stop(writer);
+        }
+
+        final ResultReader resultReader = new ResultReader(writer.write());
+        final ProtoLogTrace protologTrace = resultReader.readProtoLogTrace();
+
+        Truth.assertThat(protologTrace.messages).hasSize(1);
+        final String expectedLoggedMessage = String.format(logMessageFormat, initialValue);
+        Truth.assertThat(protologTrace.messages.getFirst().getMessage())
+                .isEqualTo(expectedLoggedMessage);
+    }
+
+    @Test
+    public void incrementalStateFlagSetForStackTrace() throws IOException {
+        PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
+                .enableProtoLog(
+                        true,
+                        List.of(new PerfettoTraceMonitor.Builder.ProtoLogGroupOverride(
+                                TestProtoLogGroup.TEST_GROUP.toString(), LogLevel.DEBUG,
+                                true)), // enable stacktrace
+                        TEST_PROTOLOG_DATASOURCE_NAME
+                ).build();
+
+        final var writer = createTempWriter(mTracingDirectory);
+        try {
+            traceMonitor.start();
+
+            // Log a message with a stacktrace but no string arguments. The stacktrace is the only
+            // interned data.
+            sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 1,
+                    LogDataType.BOOLEAN, new Object[]{true});
+        } finally {
+            traceMonitor.stop(writer);
+        }
+
+        final ResultReader reader = new ResultReader(writer.write());
+        final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
+        final var trace = Trace.parseFrom(traceBytes);
+        final var protoLogMessagePackets = trace.getPacketList().stream()
+                .filter(it -> it.hasProtologMessage()
+                        && it.getProtologMessage().getMessageId() == 1)
+                .toList();
+
+        Truth.assertThat(protoLogMessagePackets).hasSize(1);
+        final var sequenceFlag = protoLogMessagePackets.getFirst().getSequenceFlags();
+        final var incrementalStateFlag = SEQ_NEEDS_INCREMENTAL_STATE.getNumber();
+        Truth.assertWithMessage("SEQ_NEEDS_INCREMENTAL_STATE flag should be set")
+                .that(sequenceFlag & incrementalStateFlag).isEqualTo(incrementalStateFlag);
+    }
+
+    @Test
+    public void incrementalStateFlagSetForStringArg() throws IOException {
+        PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
+                .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
+                .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
+        try {
+            traceMonitor.start();
+
+            // Log a message with a string argument. The argument is the only
+            // interned data.
+            sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 6,
+                    LogDataType.STRING, new Object[]{"test_string"});
+        } finally {
+            traceMonitor.stop(writer);
+        }
+
+        final ResultReader reader = new ResultReader(writer.write());
+        final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
+        final var trace = Trace.parseFrom(traceBytes);
+        final var protoLogMessagePackets = trace.getPacketList().stream()
+                .filter(it -> it.hasProtologMessage()
+                        && it.getProtologMessage().getMessageId() == 6)
+                .toList();
+
+        Truth.assertThat(protoLogMessagePackets).hasSize(1);
+        final var sequenceFlag = protoLogMessagePackets.getFirst().getSequenceFlags();
+        final var incrementalStateFlag = SEQ_NEEDS_INCREMENTAL_STATE.getNumber();
+        Truth.assertWithMessage("SEQ_NEEDS_INCREMENTAL_STATE flag should be set")
+                .that(sequenceFlag & incrementalStateFlag).isEqualTo(incrementalStateFlag);
+    }
+
+    @Test
+    public void incrementalStateResetWhenStringsTooLarge() throws IOException {
+        assumeTrue(android.tracing.Flags.protologAutoClearIncrementalState());
+        PerfettoProtoLogImpl.MAX_INTERNED_STRINGS_SIZE_BYTES_BEFORE_RESET = 10;
+
+        PerfettoTraceMonitor traceMonitor = PerfettoTraceMonitor.newBuilder()
+                .enableProtoLog(true, List.of(), TEST_PROTOLOG_DATASOURCE_NAME)
+                .build();
+
+        final var writer = createTempWriter(mTracingDirectory);
+        try {
+            traceMonitor.start();
+
+            // Log a 5-char string, should not reset yet.
+            sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 6,
+                    LogDataType.STRING, new Object[]{"12345"});
+
+            // Log another 4-char string, should not reset yet (5 + 4 = 9).
+            sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, 6,
+                    LogDataType.STRING, new Object[]{"abcd"});
+
+            // Log a message string, should trigger reset because 9 + message_len > 10.
+            sProtoLog.log(LogLevel.DEBUG, TestProtoLogGroup.TEST_GROUP, "message");
+        } finally {
+            traceMonitor.stop(writer);
+        }
+
+        final ResultReader reader = new ResultReader(writer.write());
+        final var traceBytes = reader.readBytes(TraceType.PERFETTO, Tag.ALL);
+        final var trace = Trace.parseFrom(traceBytes);
+
+        final var clearPackets = trace.getPacketList().stream()
+                .filter(it -> (it.getSequenceFlags()
+                        & SEQ_INCREMENTAL_STATE_CLEARED.getNumber()) != 0)
+                .toList();
+        Truth.assertThat(clearPackets).hasSize(1);
+    }
+
     private enum TestProtoLogGroup implements IProtoLogGroup {
-        TEST_GROUP(true, true, false, "TEST_TAG");
+        TEST_GROUP(true, false, "TEST_TAG");
 
         private final boolean mEnabled;
-        private volatile boolean mLogToProto;
         private volatile boolean mLogToLogcat;
         private final String mTag;
 
@@ -1175,13 +1365,11 @@ public class ProcessedPerfettoProtoLogImplTest {
          * @param enabled     set to false to exclude all log statements for this group from
          *                    compilation,
          *                    they will not be available in runtime.
-         * @param logToProto  enable binary logging for the group
          * @param logToLogcat enable text logging for the group
          * @param tag         name of the source of the logged message
          */
-        TestProtoLogGroup(boolean enabled, boolean logToProto, boolean logToLogcat, String tag) {
+        TestProtoLogGroup(boolean enabled, boolean logToLogcat, String tag) {
             this.mEnabled = enabled;
-            this.mLogToProto = logToProto;
             this.mLogToLogcat = logToLogcat;
             this.mTag = tag;
         }
@@ -1192,28 +1380,13 @@ public class ProcessedPerfettoProtoLogImplTest {
         }
 
         @Override
-        public boolean isLogToProto() {
-            return mLogToProto;
-        }
-
-        @Override
         public boolean isLogToLogcat() {
             return mLogToLogcat;
         }
 
         @Override
-        public boolean isLogToAny() {
-            return mLogToLogcat || mLogToProto;
-        }
-
-        @Override
         public String getTag() {
             return mTag;
-        }
-
-        @Override
-        public void setLogToProto(boolean logToProto) {
-            this.mLogToProto = logToProto;
         }
 
         @Override
